# talon

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
docs/: DESIGN.md
docs/adr/: 0001-deterministic-quant-core.md  0002-llm-event-risk-gate.md  0003-kr-first-market-agnostic-core.md  0004-premarket-decisions-only.md  0005-staged-strategy-rules-first.md  0006-deterministic-risk-gates.md  0007-paper-trading-own-engine.md  0008-macbook-runtime-gap-tolerance.md  0009-subscription-llm-harness.md  0010-tech-data-stack.md  0011-promotion-gates.md  0012-close-execution-overnight.md  0013-close-decision-lookahead.md
docs/research/: SYNTHESIS.md  agent-01-TradingAgents.md  agent-02-ai-hedge-fund.md  agent-03-TradingAgents-CN.md  agent-04-FinGPT.md  agent-05-RD-Agent.md  agent-06-FinRobot.md  agent-07-nofx.md  agent-08-ai-financial-agent.md  agent-09-FinMem-LLM-StockTrading.md  agent-10-Stockagent.md  backfill-alternatives.md  close-bet-blog-hypotheses.md  close-bet-data-stack.md  close-betting.md  context-data-sources.md  context-llm-harness.md  context-toss-openapi.md  dart-filing-times.md  dukascopy-es-proxy.md  factor-engine-notes.md  kis-credit-balance.md  kis-endpoint-spec.md  kr-event-calendar.md  krx-investor-flows.md  krx-market-actions.md  krx-program-trading.md  krx-shorting.md  krx-vkospi-daily.md  liquidity-floors.md  qlib-absorption.md  quant-01-qlib.md  quant-02-nautilus_trader.md  quant-03-backtrader.md  quant-04-Lean.md  quant-05-vnpy.md  quant-06-FinRL.md  quant-07-vectorbt.md  quant-08-quantstats.md  quant-09-zipline-reloaded.md  (+3 more)
docs/strategy/: close-bet-v1.md
src/talon/: cli.py  config.py  errors.py  launchd.py  locks.py  models.py  timeutil.py
src/talon/backtest/: benchmark.py  cohort.py  costs.py  (+12 more)
tests/: conftest.py  test_adjust.py  test_backtest_cohort.py  test_backtest_costs.py  test_backtest_crosscheck.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_evaluate.py  test_backtest_fidelity.py  test_backtest_gaps.py  test_backtest_grid.py  test_backtest_limits.py  test_backtest_lookahead.py  test_backtest_metrics.py  test_backtest_report.py  test_backtest_sensitivity.py  test_briefing.py  test_cli.py  test_close_auction.py  test_collect.py  test_config.py  test_crosscheck.py  test_dart.py  test_dart_web.py  test_delisting.py  test_dukascopy.py  test_ecos.py  test_eod.py  test_factor_engine.py  test_factor_parser.py  test_factors.py  test_fdr_listing.py  test_fed.py  test_fred.py  test_history.py  test_holidays.py  test_ingest_actions.py  test_ingest_credit.py  test_ingest_dart_times.py  test_ingest_flows.py  (+51 more)
(+76 files in other folders)
