[project]
name = "talon"
version = "0.1.0"
description = "개인용 한국 주식 단타·스윙 투자 에이전트"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "exchange-calendars>=4.5",
    "finance-datareader>=0.9.50",
    "httpx>=0.27",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pykrx>=1.0.45",
    "setuptools>=70,<81",
]

[project.scripts]
talon = "talon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talon"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
files = ["src/talon"]
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pykrx.*",
    "FinanceDataReader.*",
    "exchange_calendars.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
